--- a/pom.xml
+++ b/pom.xml
@@ -201,7 +201,13 @@
 			</exclusions>
 
 		</dependency>
-
+		
+		<dependency>
+            <groupId>com.googlecode.json-simple</groupId>
+            <artifactId>json-simple</artifactId>
+            <version>1.1.1</version>
+        </dependency>
+		
 	</dependencies>
 
 	<repositories>
